objects/API_keys__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Google Maps API Keys</description>
    <fields>
        <fullName>Bing_API_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bing API Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_API__c</fullName>
        <defaultValue>&apos;Bing&apos;</defaultValue>
        <description>Current API currently used in code to determine Mapping Details</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Current API currently used in code to determine Mapping Details
Example: &quot;Google&quot; or &quot;Bing&quot;</inlineHelpText>
        <label>Current API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_API_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Google API Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>API keys</label>
</CustomObject>